[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/music_parser/MusicParser.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/editor/editor_strings.gd" type="Script" id=2]
[ext_resource path="res://src/editor/editor_audio.gd" type="Script" id=3]
[ext_resource path="res://src/editor/editor.gd" type="Script" id=4]
[ext_resource path="res://src/editor/editor_GUI.gd" type="Script" id=5]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.75, 0.75, 0.75, 1 )

[node name="editor" type="Node2D"]
script = ExtResource( 4 )

[node name="MusicParser" parent="." instance=ExtResource( 1 )]

[node name="strings" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -20.0
script = ExtResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
smoothing_enabled = true
smoothing_speed = 10.0

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( 160, 120 )
points = PoolVector2Array( 0, 0, 0, 120 )
width = 2.0
default_color = Color( 1, 0.207843, 0.207843, 1 )

[node name="notes" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer/GUI"]
margin_left = 1021.14
margin_top = 37.4728
margin_right = 1238.14
margin_bottom = 87.4728
text = "Exit song"

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/GUI"]
margin_left = 48.6871
margin_top = 25.7755
margin_right = 186.687
margin_bottom = 74.7755
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="CanvasLayer/GUI"]
margin_left = 646.269
margin_top = 51.6157
margin_right = 721.269
margin_bottom = 78.6157
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
visible = false
margin_left = 106.0
margin_top = 3.0
margin_right = 1126.0
margin_bottom = 722.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/GUI/Button" to="CanvasLayer/GUI" method="_on_Button_pressed"]
[connection signal="item_selected" from="CanvasLayer/GUI/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="CanvasLayer/GUI/SpinBox" to="." method="_on_SpinBox_value_changed"]
